@startuml FastBite_State_Payment
title FastBite - Estados de Pagamento (PaymentStatus)

skinparam shadowing false

[*] --> PENDING : pagamento é criado e fica\na aguardar confirmação/expiração

PENDING --> COMPLETED : confirmação do pagamento recebida\ne o valor fica aceite
PENDING --> FAILED : pagamento recusado ou prazo expirou\nsem confirmação
PENDING --> CANCELLED : cliente ou sistema cancelou\no pagamento pendente

COMPLETED --> REFUNDED : valor pago foi devolvido\ne registado como reembolso

FAILED --> [*]
CANCELLED --> [*]
REFUNDED --> [*]

@enduml
